--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: default
 		  <div class="panel-heading"><h3 class="panel-title">Social Media</h3></div>
 		  <div class="panel-body">
 			 <h4><!-- <span style="margin-right:.1em">Social Media:</span> -->
-            <span style="margin-right:.2em"><a href="https://www.facebook.com/"><i class="fa fa-facebook-square solo fa-lg"></i></a></span>
-            <span style="margin-right:.2em"><a href="https://twitter.com/"><i class="fa fa-twitter-square solo fa-lg"></i></a></span>
+            <span style="margin-right:.2em"><a href="https://www.facebook.com/michellejane/"><i class="fa fa-facebook-square solo fa-lg"></i></a></span>
+            <span style="margin-right:.2em"><a href="https://twitter.com/michelleisatwin/"><i class="fa fa-twitter-square solo fa-lg"></i></a></span>
             </h4>
 		  </div>
         </div>
