--- a/thea452.html
+++ b/thea452.html
@@ -14,7 +14,7 @@ title: "THEA 452"
 			</div>
 
 			<div class="panel panel-default">
-				<div class="panel-heading"><h3 class="panel-title">RAND Corporations Report (2001): A Response</h3>
+				<div class="panel-heading"><h3 class="panel-title">RAND Corporations Report (2001): A Response</h3></div>
 					<div class="panel-body">
 						<h4>June 16, 2015</h4>
 							<p>Other developing trends that have occurred in the field since the report was published include the trends in technology and how it affects the online presence of an arts organization. The Internet was still just developing to be the massive system that it is now in the late 1990s and the early 2000s, around when this report was published. The developing Internet trend was discussed briefly in the summary section of the reading but I think it is worth discussing in greater detail since the growth has been so large. I think that since the early 2000s, the development of social media and the availability of technology to consumers has affected the growth of the performing arts and entertainment fields.</p>
