--- a/thea452.html
+++ b/thea452.html
@@ -3,12 +3,11 @@ layout: default
 title: "THEA 452"
 ---
 			<div class="panel panel-default">
-				<div class="panel-heading"><h3 class="panel-title">THEA 452</h3></div>
+				<div class="panel-heading"><h3 class="panel-title">THEA 452 Blogs</h3></div>
 					<div class="panel-body">
 					          <h4>Michelle Plunkett</h4>
 								<blockquote>
-									  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-									  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+									  <p>This is a page featuring all of the of blog posts I compiled for THEA 452: Principles of Arts Management during the Summer of 2015.</p>
 								</blockquote>
 					</div>
 			</div>
