--- a/contactme.html
+++ b/contactme.html
@@ -3,11 +3,11 @@ layout: default
 title: "Contact Me"
 ---
 			<div class="panel panel-default">
-				<div class="panel-heading"><h3 class="panel-title">Contact Me</h3></div>
+				<div class="panel-heading"> </div>
 					<div class="panel-body">
             <form class="form-horizontal">
               <fieldset>
-                <legend>Legend</legend>
+                <legend>Contact Me</legend>
                 <div class="form-group">
                   <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                   <div class="col-lg-10">
