--- a/contactme.html
+++ b/contactme.html
@@ -2,77 +2,36 @@
 layout: default
 title: "Contact Me"
 ---
-			<div class="panel panel-default">
-				<div class="panel-heading"> </div>
-					<div class="panel-body">
+
+<div class="panel panel-default">
+	<div class="panel-heading"> </div>
+		<div class="panel-body">
             <form class="form-horizontal">
               <fieldset>
                 <legend>Contact Me</legend>
                 <div class="form-group">
+                  <label for="inputName" class="col-lg-2 control-label">Name</label>
+                  <div class="col-lg-10">
+                    <input type="name" class="form-control" id="inputName" placeholder="Name">
+                  </div>
+                </div>
+                <div class="form-group">
                   <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                   <div class="col-lg-10">
-                    <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                  <label for="inputSubject" class="col-lg-2 control-label">Subject</label>
                   <div class="col-lg-10">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                    <div class="checkbox">
-                      <label>
-                        <input type="checkbox"> Checkbox
-                      </label>
-                    </div>
+                    <input type="subject" class="form-control" id="inputSubject" placeholder="Subject">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="textArea" class="col-lg-2 control-label">Textarea</label>
+                  <label for="textArea" class="col-lg-2 control-label">Message</label>
                   <div class="col-lg-10">
                     <textarea class="form-control" rows="3" id="textArea"></textarea>
-                    <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="col-lg-2 control-label">Radios</label>
-                  <div class="col-lg-10">
-                    <div class="radio">
-                      <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                        Option one is this
-                      </label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                        Option two can be something else
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="select" class="col-lg-2 control-label">Selects</label>
-                  <div class="col-lg-10">
-                    <select class="form-control" id="select">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                    <br>
-                    <select multiple="" class="form-control">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-lg-10 col-lg-offset-2">
-                    <button type="reset" class="btn btn-default">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <span class="help-block">Message</span>
                   </div>
                 </div>
               </fieldset>
