--- a/contactme.html
+++ b/contactme.html
@@ -12,26 +12,25 @@ title: "Contact Me"
                 <div class="form-group">
                   <label for="inputName" class="col-lg-2 control-label">Name</label>
                   <div class="col-lg-10">
-                    <input type="name" class="form-control" id="inputName" placeholder="Name">
+                    <input type="name" class="form-control" id="inputName">
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                   <div class="col-lg-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail">
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="inputSubject" class="col-lg-2 control-label">Subject</label>
                   <div class="col-lg-10">
-                    <input type="subject" class="form-control" id="inputSubject" placeholder="Subject">
+                    <input type="subject" class="form-control" id="inputSubject">
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="textArea" class="col-lg-2 control-label">Message</label>
                   <div class="col-lg-10">
                     <textarea class="form-control" rows="3" id="textArea"></textarea>
-                    <span class="help-block">Message</span>
                   </div>
                 </div>
               </fieldset>
