--- a/contactme.html
+++ b/contactme.html
@@ -33,6 +33,12 @@ title: "Contact Me"
                     <textarea class="form-control" rows="3" id="textArea"></textarea>
                   </div>
                 </div>
+		                  <div class="form-group">
+		      <div class="col-lg-10 col-lg-offset-2">
+		        <button type="reset" class="btn btn-default">Cancel</button>
+		        <button type="submit" class="btn btn-primary">Submit</button>
+		      </div>
+		    </div>
               </fieldset>
             </form>
           </div>
