--- a/thea452finalproject.html
+++ b/thea452finalproject.html
@@ -5,9 +5,7 @@ title: "THEA 452"
 			<div class="panel panel-default">
 				<div class="panel-heading"><h3 class="panel-title">THEA 452 Final Project</h3></div>
 					<div class="panel-body">
-					          <h4>Michelle Plunkett</h4>
-								<blockquote>
-									  <p>This is a page featuring all of the of blog posts I compiled for THEA 452: Principles of Arts Management during the Summer of 2015.</p>
-								</blockquote>
+					          <h4>Illinois Oboe Society</h4>
+					       		<iframe src="https://docs.google.com/document/d/1gXXdQ28WTS0EyAdYYFd5V1-k9EoXyAWRp6Rz2UsrqiQ/pub?embedded=true"></iframe>
 					</div>
 			</div>
