--- a/resume.html
+++ b/resume.html
@@ -5,10 +5,7 @@ title: "Resume"
 			<div class="panel panel-default">
 				<div class="panel-heading"><h3 class="panel-title">Resume</h3></div>
 					<div class="panel-body">
-					          <h4>Michelle Plunkett</h4>
-								<blockquote>
-									  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-									  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-								</blockquote>
+					          <h4>Michelle Plunkett's Resume</h4>
+							<iframe src="https://docs.google.com/document/d/B1dUInJge_OMc2VSWmZqNXZTb1E/pub?embedded=true" height="1200" width="900"></iframe>
 					</div>
 			</div>
