--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,6 @@ title: "Resume"
 				<div class="panel-heading"><h3 class="panel-title">Resume</h3></div>
 					<div class="panel-body">
 					          <h4>Michelle Plunkett's Resume</h4>
-							<iframe src="https://docs.google.com/document/d/B1dUInJge_OMc2VSWmZqNXZTb1E/pub?embedded=true" height="1200" width="900"></iframe>
+							<iframe src="https://drive.google.com/file/d/0B1dUInJge_OMc2VSWmZqNXZTb1E/preview" width="1200" height="900"></iframe>
 					</div>
 			</div>
