--- a/contactme.html
+++ b/contactme.html
@@ -4,43 +4,44 @@ title: "Contact Me"
 ---
 
 <div class="panel panel-default">
-	<div class="panel-heading"> </div>
-		<div class="panel-body">
-            <form class="form-horizontal">
-              <fieldset>
-                <legend>Contact Me</legend>
-                <div class="form-group">
-                  <label for="inputName" class="col-lg-2 control-label">Name</label>
-                  <div class="col-lg-10">
-                    <input type="name" class="form-control" id="inputName">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-                  <div class="col-lg-10">
-                    <input type="email" class="form-control" id="inputEmail">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputSubject" class="col-lg-2 control-label">Subject</label>
-                  <div class="col-lg-10">
-                    <input type="subject" class="form-control" id="inputSubject">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="textArea" class="col-lg-2 control-label">Message</label>
-                  <div class="col-lg-10">
-                    <textarea class="form-control" rows="3" id="textArea"></textarea>
-                  </div>
-                </div>
-		                  <div class="form-group">
-		      <div class="col-lg-10 col-lg-offset-2">
-		        <button type="reset" class="btn btn-default">Cancel</button>
-		        <button type="submit" class="btn btn-primary">Submit</button>
-		      </div>
-		    </div>
-              </fieldset>
-            </form>
-          </div>
-        </div>
+  <div class="panel-body">
+    <h2>Contact Me</h2>
+            
+<form class="form-horizontal" action="/php/corporate-form.php" method="post">
+  <fieldset>
+    <legend  class="lead">Questions, comments, concerns?</legend>
+    <div class="form-group">
+      <label for='name' class="col-lg-2 control-label">Name</label>
+      <div class="col-lg-10">
+        <input name='name' type="text" class="form-control" >
       </div>
+    </div>
+    <div class="form-group">
+      <label for='email' class="col-lg-2 control-label">Email</label>
+      <div class="col-lg-10">
+        <input name='email' type="text" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group">
+      <label for='subject' class="col-lg-2 control-label">Subject</label>
+      <div class="col-lg-10">
+        <input name='subject' type="text" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group">
+      <label for='message' class="col-lg-2 control-label">Message</label>
+      <div class="col-lg-10">
+        <textarea name='message' class="form-control" rows="10" ></textarea>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-lg-10 col-lg-offset-2" align="right">
+        <button name="reset" type="reset" class="btn btn-default" value="Cancel"><i class="fa fa-trash-o"></i> Cancel</button>
+        <button name="submit" type="submit" class="btn btn-primary" value="Submit">Submit <i class="fa fa-paper-plane-o"></i></button>
+      </div>
+    </div>
+  </fieldset>
+</form>      
+      
+  </div>
+</div>
