--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@ title: "Contact Me"
   <div class="panel-body">
     <h2>Contact Me</h2>
             
-<form class="form-horizontal" action="/php/corporate-form.php" method="post">
+<form class="form-horizontal" action="/php/contact-form.php" method="post">
   <fieldset>
     <legend  class="lead">Questions, comments, concerns?</legend>
     <div class="form-group">
