--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,6 @@ title: "Thank you!"
 <div class="panel panel-default">
   <div class="panel-body">
       <h2>Thank you!</h2>
-      <p class="lead">We will get back to you as soon as possible.</p>
+      <p class="lead">I will get back to you as soon as possible.</p>
   </div>
 </div>
