--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@ title: "Contact Me"
   <div class="panel-body">
     <h2>Contact Me</h2>
             
-<form class="form-horizontal" action="/php/contact-form.php" method="POST">
+<form class="form-horizontal" action="mailto:michellejplunkett@gmail.com" method="POST" enctype="text/plain">
   <fieldset>
     <legend  class="lead">Questions, comments, concerns?</legend>
     <div class="form-group">
@@ -31,7 +31,7 @@ title: "Contact Me"
     <div class="form-group">
       <label for='message' class="col-lg-2 control-label">Message</label>
       <div class="col-lg-10">
-        <textarea name='message' class="form-control" rows="10" ></textarea>
+        <textarea name='message' type="text" class="form-control" rows="10" ></textarea>
       </div>
     </div>
     <div class="form-group">
