--- a/videos.html
+++ b/videos.html
@@ -5,10 +5,10 @@ title: "Videos"
 			<div class="panel panel-default">
 				<div class="panel-heading"><h3 class="panel-title">Videos</h3></div>
 					<div class="panel-body">
-					          <h4>Michelle Plunkett</h4>
-								<blockquote>
-									  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-									  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-								</blockquote>
+					          <h4>Michelle Plunkett's 2014 Recital</h4>
+							<h2>Part I: Sonata for Oboe and Piano, Op. 166 by Camille Saint-Saens</h2>
+							<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IBM7qktLykM" frameborder="0" allowfullscreen></iframe></center>
+							<h2>Part II: Oboe Concerto in C Major, Hob. VIIg:C1 by Franz Joseph Haydn</h2>
+							<center><iframe width="560" height="315" src="https://www.youtube.com/embed/yI-CM37YHuE" frameborder="0" allowfullscreen></iframe></center>
 					</div>
 			</div>
