--- a/compositions.html
+++ b/compositions.html
@@ -9,6 +9,14 @@ title: "Compositions"
     <p>This page features compositions I have composed for various courses at the University of Illinois.</p>
 </div>
 
+<!--
+			<div class="panel panel-default">
+					<div class="panel-body" style="margin-bottom:-1.25em">
+				            <p class="lead">This page features compositions I have composed for various courses at the University of Illinois.</p>
+					</div>
+			</div>
+-->
+
 <!-- The posts -->
   <div class="col">
     {% for compositions in site.categories.compositions %}
