--- a/writing.html
+++ b/writing.html
@@ -12,20 +12,20 @@ title: "Writing Samples"
 <!--
 			<div class="panel panel-default">
 					<div class="panel-body" style="margin-bottom:-1.25em">
-				            <p class="lead">This page features projects I have completed for various courses at the University of Illinois.</p>
+				            <p class="lead">This page features writing samples I have completed for various courses at the University of Illinois.</p>
 					</div>
 			</div>
 -->
 
 <!-- The posts -->
   <div class="col">
-    {% for projects in site.categories.projects %}
-    <article class="box" id="{{ projects.title }}">
+    {% for writing in site.categories.writing %}
+    <article class="box" id="{{ writing.title }}">
 			<div class="panel panel-default">
-			  <div class="panel-heading"><h3 class="panel-title"><a href="{{ projects.url | prepend: site.baseurl }}">{{ projects.title }}</a></h3></div>
+			  <div class="panel-heading"><h3 class="panel-title"><a href="{{ writing.url | prepend: site.baseurl }}">{{ writing.title }}</a></h3></div>
 					<div class="panel-body">
-					  <span><h4>{{ projects.date | date:'%B %d, %Y' | replace:' 0',' ' }}</h4>
-						  {{ projects.content }}</span>
+					  <span><h4>{{ writing.date | date:'%B %d, %Y' | replace:' 0',' ' }}</h4>
+						  {{ writing.content }}</span>
 					</div>
 			</div>
     </article>
