--- a/writing.html
+++ b/writing.html
@@ -5,16 +5,8 @@ title: "Writing Samples"
 
 <div class="alert alert-dismissable alert-warning">
     <button type="button" class="close" data-dismiss="alert">×</button>
-    <p>This page features writing samples I have completed for various courses at the University of Illinois.</p>
+    <p>This page features writing samples I have completed for various courses at the University of Illinois and at the University of Texas at Austin.</p>
 </div>
-
-<!--
-			<div class="panel panel-default">
-					<div class="panel-body" style="margin-bottom:-1.25em">
-				            <p class="lead">This page features writing samples I have completed for various courses at the University of Illinois.</p>
-					</div>
-			</div>
--->
 
 <!-- The posts -->
   <div class="col">
