--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@ title: "Writing Samples"
 
 <div class="alert alert-dismissable alert-warning">
     <button type="button" class="close" data-dismiss="alert">×</button>
-    <p>This page features writing samples I have completed for various courses at the University of Illinois and at the University of Texas at Austin.</p>
+    <p>This section features writing samples I have completed for various courses at the University of Illinois and at the University of Texas at Austin.</p>
 </div>
 
 <!-- The posts -->
