--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,7 @@
 ---
 layout: default
-title: "Resume"
+title: "Michelle Plunkett's Resume"
 ---
-			<div class="panel panel-default">
-				<div class="panel-heading"><h3 class="panel-title">Resume</h3></div>
-					<div class="panel-body">
-					          <h4>Michelle Plunkett's Resume</h4>
-							<center><iframe src="https://drive.google.com/file/d/0B1dUInJge_OMZ3JBclBBR1BmNDA/preview" width="900" height="1200"></iframe></center>
-					</div>
-			</div>
+
+<center><iframe src="https://drive.google.com/file/d/0B1dUInJge_OMZ3JBclBBR1BmNDA/preview" width="900" height="1100"></iframe></center>
+
