--- a/about.html
+++ b/about.html
@@ -7,8 +7,9 @@ title: "About"
 					<div class="panel-body">
 					          <h4>Michelle Plunkett</h4>
 								<blockquote>
-									  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-									  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+									  <p>"Education in music and poetry is most important ... because rhythm and harmony permeate the inner part of the soul more than anything else, affecting it most strongly and bringing it grace, so that is someone is properly educated in music and poetry, it makes him graceful, but if not, then the opposite. [And] because anyone who has been properly educated in music and poetry will sense it acutely when something has been omitted from a thing and when it hasn't been finely crafted or finely made by nature."</p>
+									  <small>Plato in <i>Republic III 401d-e</i></small>
 								</blockquote>
+							<large>My name is Michelle Plunkett.</large>
 					</div>
 			</div>
