--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@ title: "About"
 									  <p>"Education in music and poetry is most important ... because rhythm and harmony permeate the inner part of the soul more than anything else, affecting it most strongly and bringing it grace, so that is someone is properly educated in music and poetry, it makes him graceful, but if not, then the opposite. [And] because anyone who has been properly educated in music and poetry will sense it acutely when something has been omitted from a thing and when it hasn't been finely crafted or finely made by nature."</p>
 									  <small>Plato in <i>Republic III 401d-e</i></small>
 								</blockquote>
-							<large>My name is Michelle Plunkett.</large>
+							<h2>My name is Michelle Plunkett.</h2>
+							<p>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree. I plan to graduate in May of 2018.</p>
 					</div>
 			</div>
