--- a/about.html
+++ b/about.html
@@ -9,4 +9,4 @@ title: "About"
 </blockquote>
 
 <h2>My name is Michelle Plunkett.</h2>
-<p>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree. I plan to graduate in May of 2018.</p>
+<p><h3>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree. I plan to graduate in May of 2018.</h3></p>
