--- a/about.html
+++ b/about.html
@@ -9,4 +9,5 @@ title: "About"
 </blockquote>
 
 <h2>My name is Michelle Plunkett.</h2>
-<p><h3>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree. I plan to graduate in May of 2018.</h3></p>
+<p><h4>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree.</h4></p>
+<p><h4>I plan to graduate in May of 2018.</h4></p>
