--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@ title:	"About Me"
 	<small>Plato in <i>Republic III 401d-e</i></small>
 </blockquote>
 
-<h2>My name is Michelle Plunkett.</h2>
-<p><h4>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree.</h4></p>
-<p><h4>I plan to graduate in May of 2018.</h4></p>
+<center>
+	<h2>My name is Michelle Plunkett.</h2>
+	<p><h4>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree.</h4></p>
+	<p><h4>I plan to graduate in May of 2018.</h4></p>
+</center>
