--- a/about.html
+++ b/about.html
@@ -11,5 +11,8 @@ title:	"About Me"
 <center>
 	<h2>My name is Michelle Plunkett.</h2>
 	<p><h4>I am a graduate student at the University of Texas at Austin studying for a Master of Public Affairs degree.</h4></p>
-	<p><h4>I plan to graduate in May of 2018.</h4></p>
+	<p><h4>I plan to graduate in <b>May of 2018</b>.</h4></p>
 </center>
+***
+<h3><u>Policy Interests:</u></h3>
+<h5>1. Arts & Cultural Policy</h5>
