--- a/about.html
+++ b/about.html
@@ -15,4 +15,4 @@ title:	"About Me"
 </center>
 * * *
 <h3><u>Policy Interests:</u></h3>
-<dd><h5>1. Arts & Cultural Policy</h5></dd>
+<h5>  * 1. Arts & Cultural Policy</h5>
