--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-layout: blog
+layout: about
 title:	"About Me"
 ---
 
@@ -15,4 +15,4 @@ title:	"About Me"
 </center>
 * * *
 <h3><u>Policy Interests:</u></h3>
-<h5>  * 1. Arts & Cultural Policy</h5>
+<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Arts & Cultural Policy</h5>
