--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@ layout: about
 title:	"About Me"
 ---
 
+  <div class="col">
+    <article class="box" id="{{ post.title }}">
+	<div class="panel panel-primary">
+		<div class="panel-body">
+
 <blockquote>
 	<p>"Education in music and poetry is most important ... because rhythm and harmony permeate the inner part of the soul more than anything else, affecting it most strongly and bringing it grace, so that is someone is properly educated in music and poetry, it makes him graceful, but if not, then the opposite. [And] because anyone who has been properly educated in music and poetry will sense it acutely when something has been omitted from a thing and when it hasn't been finely crafted or finely made by nature."</p>
 	<small>Plato in <i>Republic III 401d-e</i></small>
@@ -16,3 +21,8 @@ title:	"About Me"
 ----------------
 <h3><u>Policy Interests:</u></h3>
 <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Arts & Cultural Policy</h5>
+
+		</div>
+	</div>
+    </article>
+  </div>
