--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <div class="col">
-    <article class="box" id="{{ post.title }}">
-	<div class="panel panel-primary">
+	<div class="panel panel-default">
 		<div class="panel-body">
 
 	<blockquote>
@@ -19,5 +18,4 @@
 
 		</div>
 	</div>
-    </article>
-  </div>
+</div>
