--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <div class="col">
 	<div class="panel panel-default">
 		<div class="panel-body">
+			<article class="panel-content">
 
 	<blockquote>
 		<p>"Education in music and poetry is most important ... because rhythm and harmony permeate the inner part of the soul more than anything else, affecting it most strongly and bringing it grace, so that is someone is properly educated in music and poetry, it makes him graceful, but if not, then the opposite. [And] because anyone who has been properly educated in music and poetry will sense it acutely when something has been omitted from a thing and when it hasn't been finely crafted or finely made by nature."</p>
@@ -16,6 +17,7 @@
 	<h3><u>Policy Interests:</u></h3>
 		<h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Arts & Cultural Policy</h5>
 
+			</article>
 		</div>
 	</div>
 </div>
