--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="col">
     {% for post in site.categories.posts %}
     <article class="box" id="{{ post.title }}">
-			<div class="panel panel-primary">
+			<div class="panel panel-default">
 			 <!--<div class="panel-heading">
 			  	<h4 class="panel-title">
 			  	<a href="{{ post.url | prepend: site.baseurl }}">
