--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ layout: default
   <div class="col">
     {% for post in site.categories.about %}
     <article class="box" id="{{ post.title }}">
-			<div class="panel panel-primary">
+			<div class="panel panel-default">
 					<div class="panel-body">
 						  {{ post.content }}</span>
 					</div>
