--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: default
     <article class="box" id="{{ post.title }}">
 			<div class="panel panel-default">
 					<div class="panel-body">
-						  {{ page.content }}
+						  {{ post.content }}
 					</div>
 			</div>
     </article>
