--- a/about.html
+++ b/about.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
  <div class="col">
     {% for post in site.categories.about %}
     <article class="box" id="{{ post.title }}">
