--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 			 -->
 					<div class="panel-body">
 					  <!--<span><h4>{{ post.date | date:'%B %d, %Y' | replace:' 0',' ' }}</h4>-->
-						  {{ content }}
+						  {{ post.content }}
 					</div>
 			</div>
     </article>
