--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ layout: default
 			 -->
 					<div class="panel-body">
 					  <!--<span><h4>{{ post.date | date:'%B %d, %Y' | replace:' 0',' ' }}</h4>-->
-						  {{ post.content }}
+						  {{ content }}
 					</div>
 			</div>
     </article>
