--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 			 -->
 					<div class="panel-body">
 					  <!--<span><h4>{{ post.date | date:'%B %d, %Y' | replace:' 0',' ' }}</h4>-->
-						  {{ content }}</span>
+						  {{ page.content }}</span>
 					</div>
 			</div>
     </article>
