--- a/index.html
+++ b/index.html
@@ -22,3 +22,14 @@ layout: default
       </li>
     {% endfor %}
 </ul>
+
+<br/>
+<hr/>
+<br/>
+<span class="contacticon center">
+	<a href="mailto:michellep1994@gmail.com"><i class="fa fa-envelope-square"></i></a>
+	<a href="https://github.com/michelleplunkett" target="_blank"><i class="fa fa-github-square"></i></a>
+	<a href="https://www.linkedin.com/in/michellejane" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+	<a href="http://blog.michelle-plunkett.com" target="_blank"><i class="fa fa-tumblr-square"></i></a>
+	<a href="https://twitter.com/michelleisatwin" target="_blank"><i class="fa fa-twitter-square"></i></a>
+</span>
