--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-bar">
   <h1>michelle plunkett</h1>
-  <h2>Public Affairs Graduate Fellow</h2>
+  <h2>Graduate Fellow in Public Affairs</h2>
   <br/>
   <hr>
   <br/>
