--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ layout: default
 
 <div class="header-bar">
   <h1>michelle plunkett</h1>
-  <h2>Graduate Fellow in Public Affairs</h2>
+  <h2>Master of Public Affairs Candidate, 2018</h2>
+  <h2>J.J. "Jake" Pickle Endowed Fellow</h2>
+  <h2>Helen J. and Robert S. Strauss Fellow</h2>
   <br/>
   <hr>
   <br/>
