--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="header-bar">
   <h1>michelle plunkett</h1>
   <h2>Master of Public Affairs Candidate, 2018</h2>
-  <h4>J.J. "Jake" Pickle Endowed Fellow <br> Helen J. and Robert S. Strauss Fellow</h4>
+  <p>J.J. "Jake" Pickle Endowed Fellow <br> Helen J. and Robert S. Strauss Fellow</p>
   <br/>
   <hr>
   <br/>
