--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
   <h1>michelle plunkett</h1>
   <h2>Master of Public Affairs Candidate, 2018</h2>
   <br/>
+	<h3>J.J. Pickle Fellow<br/>Helen J. and Robert S. Strauss Fellow</h3>
   <hr>
   <br/>
 </div>
