--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1>michelle plunkett</h1>
   <h2>Master of Public Affairs Candidate, 2018</h2>
 </div>
-<center><h2>J.J. Pickle Fellow<br/>Helen J. and Robert S. Strauss Fellow</h2></center>
+<center><h3>J.J. Pickle Fellow &amp; Helen J. and Robert S. Strauss Fellow</h3></center>
 <br/>
 <hr>
 <br/>
