--- a/_portfolio/aem-problem-set-4.html
+++ b/_portfolio/aem-problem-set-4.html
@@ -1,3 +1,10 @@
+---
+layout: default
+title: AEM Problem Set #4
+description: A statistical analysis using Stata and the MarkDoc package. 
+date: 2017-05-05
+---
+
 <!doctype html>
 <html>
 <head>
