--- a/_portfolio/aem-problem-set-4.html
+++ b/_portfolio/aem-problem-set-4.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: AEM Problem Set #4
 description: A statistical analysis using Stata and the MarkDoc package. 
 date: 2017-05-05
