--- a/_portfolio/aem-problem-set-4.html
+++ b/_portfolio/aem-problem-set-4.html
@@ -6,12 +6,10 @@ date: 2017-05-05
 ---
 
 <style type="text/css">
-  @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import url('https://fonts.googleapis.com/css?family=Amaranth');
 
 body {
         margin: auto;
-        font-family: "Source Sans Pro";
+        font-family: ;
         font-size: 14px;
         max-width: 778px;
         }
@@ -20,7 +18,7 @@ header {
         padding-bottom:5px; 
         margin:0;
         padding-top:5px; 
-        font-family: "Amaranth";
+        font-family: ;
         background-color:white; 
         color: #3f1d56;
         text-align:center;
@@ -79,7 +77,7 @@ img {
 h1, h1 > a, h1 > a:link {
         margin:24px 0px 10px 0px;
         padding: 0;
-        font-family: "Amaranth";
+        font-family: ;
         color:#3f1d56;
         font-size: 22px;
         }
@@ -91,7 +89,7 @@ color:#345A8A;
 h2, h2 > a, h2 > a, h2 > a:link {
         margin:14px 0px 10px 0px;
         padding: 0;
-        font-family: "Amaranth";
+        font-family: ;
         color:#5a297c;
         font-size: 18px;
         font-weight:bold;
@@ -149,7 +147,7 @@ p {
         align-content: center;
         padding:5px;
         display:block;
-        font-size:12px;
+        font-size:11px;
         line-height:14px;
         background-color:#E1E6F0;
         font-family:"Lucida Console", Monaco, monospace, "Courier New", Courier, monospace;
