--- a/_portfolio/aem-problem-set-4.html
+++ b/_portfolio/aem-problem-set-4.html
@@ -54,6 +54,7 @@ pre {
     padding: 30px 10px 0px 10px;
 }
 pre code {
+    font-size: 13px;
     border-radius: 3px;
     background-color: #F8F8F8;
     background: transparent; 
