--- a/_portfolio/aem-problem-set-4.html
+++ b/_portfolio/aem-problem-set-4.html
@@ -6,7 +6,11 @@ date: 2017-05-05
 ---
 
 <style type="text/css">
-
+        
+body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
+    margin: 0px 0px 15px 0px;
+    padding: 0;
+}
 .code {
         white-space:pre;
         color: black;
