--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<style type="text/css">
+	
+body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
+	margin: 0;
+    	padding: 0;
+}
+
 <div class="header-bar">
   <h1>michelle plunkett</h1>
   <h2>Master of Public Affairs Candidate, 2018</h2>
