--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
 	margin: 0;
     	padding: 0;
 }
+</style>
 
 <div class="header-bar">
   <h1>michelle plunkett</h1>
