--- a/_projects/aem-problem-set-4.html
+++ b/_projects/aem-problem-set-4.html
@@ -7,7 +7,7 @@ date: 2017-05-05
 
 <h1>Introduction</h1>
 <p>I went all out on this problem set (in terms of the formatting of my final document.) In order to run my do file, Stata requires that you have ivreg2, xtivreg2, ranktest, ivendog, and overid installed to run these statistical analyses. I used the &quot;ssc install&quot; command to install the latest versions of these functions. Using &quot;search [package name]&quot; works but I found that it is hard to find the latest version this way (xtivreg2 requires the newest versions of certain supplementary functions).</p>
-<p>To make this Word Document, I used a package called &quot;MarkDoc&quot; and coded my do-file with markdown (a langauge). This package then converts the SMCL file into a Word Document or a PDF using additional packages like Statax and Weaver. Additional third party packages are also required, specifically, Pandoc and wkhtmltopdf. Finally, I wrote an external style sheet using CSS to tell the conversion process how to style my final document in HTML.</p>
+<p>To make this Word Document, I used a package called &quot;MarkDoc&quot; and coded my do-file with markdown (a language). This package then converts the SMCL file into a Word Document or a PDF using additional packages like Statax and Weaver. Additional third party packages are also required, specifically, Pandoc and wkhtmltopdf. Finally, I wrote an external style sheet using CSS to tell the conversion process how to style my final document in HTML.</p>
 <p><a href="http://bit.ly/2qKAZe4">Click Here</a> to read more about MarkDoc.</p>
 <h3>Data Summary</h3>
 <pre><code>      .  xtset
