--- a/_projects/aem-problem-set-4.html
+++ b/_projects/aem-problem-set-4.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: AEM Problem Set #4
-description: A statistical analysis using Stata and the MarkDoc package. 
+title: AEM Problem Set 4
 date: 2017-05-05
+img: /img/AEMProblemSet4.png
 ---
 
 <h1>Introduction</h1>
