--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
 </style>
 
 <div class="header-bar">
-  <h1>michelle plunkett</h1>
+  <h1>Michelle Plunkett</h1>
   <h2>Master of Public Affairs Candidate, 2018</h2>
 </div>
-<center><h3>J.J. Pickle Fellow &amp; Helen J. and Robert S. Strauss Fellow</h3></center>
+<center><h3><em>J.J. Pickle Fellow &amp; Helen J. and Robert S. Strauss Fellow</em></h3></center>
 <br/>
 <hr>
 <br/>
