--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
 
 <div class="header-bar">
   <h1>Michelle Plunkett</h1>
-  <h2>Master of Public Affairs Candidate, 2018</h2>
+  <h2>MPAff Candidate, 2018</h2>
 </div>
 <center><h3><em>J.J. Pickle Fellow &amp; Helen J. and Robert S. Strauss Fellow</em></h3></center>
 <br/>
