--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
 	data analysis and machine learning. Focused on high quality user experiences, 
 	at Indeed I use my skills to write, implement, and evaluate influential 
 	policies at the global scale.
-</p><br/>
+</p><br/><br/>
 <p>
-	Please feel free to check out my <b><a href="/posts/">blog posts</a></b>, 
-	<b><a href="/projects/">projects</a></b>, or <b><a href="/notebooks/">notebooks</a></b>, 
+	Please feel free to check out my <strong><a href="/posts/">blog posts</a></strong>, 
+	<strong><a href="/projects/">projects</a></strong>, or <strong><a href="/notebooks/">notebooks</a></strong>, 
 	and thanks for visiting!
 </p>
 
