--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
 </style>
 
 <div class="header-bar">
-  <h1>Michelle Plunkett, MPAff</h1>
-  <h2>Senior Policy Analyst, Indeed.com</h2>
+  <h1>Michelle Plunkett</h1>
+  <h2>Master of Public Affairs, UT Austin</h2>
+  <h3>Senior Policy Analyst, Indeed.com</h3>
 </div>
 <br/>
 <hr>
